--- a/css/styles.css
+++ b/css/styles.css
@@ -93,7 +93,7 @@ body .card_right h1 {
 
 body .card_right__details ul {
   list-style-type: none;
-  padding: 0 0 0 40px;
+  padding: 0 0 10px 40px;
   margin: 10px 0 0 0;
 }
 
@@ -103,6 +103,11 @@ body .card_right__details ul li {
   font-weight: 400;
   font-size: 14px;
   padding: 0 40px 0 0;
+}
+
+body .card_right__review {
+  max-height: 210px;
+  overflow: auto;
 }
 
 body .card_right__review p {
